<resources>
    <string name="app_name">GameApplication</string>
    <string name="login">登录</string>
    <string name="find_pass">找回密码</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone_findPass">绑定手机号，可用于找回密码</string>
    <string name="register">注册账号</string>
    <string name="phone">手机号码</string>
    <string name="new_password">新密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>