<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.LoginActivity">

    <include
            layout="@layout/view_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <EditText
                android:hint="@string/phone"
                android:id="@+id/phone"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:lines="1" />

        <EditText
                android:hint="@string/new_password"
                android:id="@+id/password"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:lines="1" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/findPass"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/login_button_shape"
                android:text="@string/find_pass"
                android:textColor="@color/white" />

        <FrameLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_margin="12dp"
                    android:layout_gravity="end"
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/purple_500" />


        </FrameLayout>
    </LinearLayout>

</LinearLayout>